--- a/nodejs/package.json
+++ b/nodejs/package.json
@@ -4,14 +4,17 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": " db-migrate up; node app.js;"
+    "start": " db-migrate up; nodemon app.js;"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "fs": "0.0.1-security",
+    "jsonwebtoken": "^8.5.1",
     "mysql": "^2.18.1",
+    "nodemon": "^2.0.7",
     "sequelize": "^6.3.5"
   }
 }
